Umsetzung des HATEOAS-Prinzips und Verallgemeinerung der Backend-Klasse der SPA
