# Grundgerüst einer Single Page App mit REST-Backend/Backend/src/controller/example.controller.js
@@ -34,11 +34,31 @@ export default class ExampleController {
     }
 
     /**
+     * Hilfsmethode zum Einfügen von HATEOAS-Links in einen Datensatz.
+     * Dem Datensatz wird ein Attribut `_links` gemäß der OpenAPI-Spezifikation
+     * hinzugefügt, damit ein Client erkennen kann, wie er die Entität lesen,
+     * ändern oder löschen kann.
+     *
+     * @param {Object} entity Zu verändernder Datensatz.
+     */
+    _insertHateoasLinks(entity) {
+        let url = `${this._prefix}/${entity._id}`;
+
+        entity._links = {
+            read:   {url: url, method: "GET"},
+            update: {url: url, method: "PUT"},
+            patch:  {url: url, method: "PATCH"},
+            delete: {url: url, method: "DELETE"},
+        }
+    }
+
+    /**
      * GET /example
      * Beispiele suchen
      */
     async search(req, res, next) {
         let result = await this._service.search(req.query);
+        result.forEach(entity => this._insertHateoasLinks(entity));
         res.sendResult(result);
         return next();
     }
@@ -49,6 +69,7 @@ export default class ExampleController {
      */
     async create(req, res, next) {
         let result = await this._service.create(req.body);
+        this._insertHateoasLinks(result);
 
         res.status(201);
         res.header("Location", `${this._prefix}/${result._id}`);
@@ -63,6 +84,7 @@ export default class ExampleController {
      */
     async read(req, res, next) {
         let result = await this._service.read(req.params.id);
+        this._insertHateoasLinks(result);
 
         if (result) {
             res.sendResult(result);
@@ -80,6 +102,7 @@ export default class ExampleController {
      */
     async update(req, res, next) {
         let result = await this._service.update(req.params.id, req.body);
+        this._insertHateoasLinks(result);
 
         if (result) {
             res.sendResult(result);
